Reduce size of images + fix some images with wrong color

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -12,7 +12,7 @@
 	{
 		background:
 		{
-			image: url('#{$jpg-dir}opencraft_background_testimonials.jpg');
+			image: url('#{$png-dir}opencraft_background_testimonials.png');
 			position: center;
 			size: cover;
 		}	
